# latexd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  PROGRESS.md  README.md
crates/latexd/: Cargo.toml
crates/latexd-wasi/: Cargo.toml
crates/latexd-wasi/src/: main.rs
crates/latexd-wasm/: Cargo.toml
crates/latexd-wasm/src/: lib.rs
crates/latexd/src/: compiler.rs  lib.rs  main.rs  prepared_asset_cache.rs
crates/latexd/tests/: arxiv_oracle.rs  arxiv_smoke.rs  render_ir.rs  smoke.rs
crates/latexd/tests/smoke/: bibliography.rs  bibliography_checkpoint_preference.rs  bibliography_checkpoint_preference_dirty_only.rs  bibliography_checkpoint_preference_dirty_only_unreadable_noise.rs  bibliography_checkpoint_preference_dirty_only_unreadable_noise_follows.rs  bibliography_checkpoint_preference_dirty_only_unreadable_noise_precedes.rs  bibliography_checkpoint_preference_dirty_only_untracked_noise.rs  bibliography_checkpoint_preference_dirty_only_untracked_noise_follows.rs  bibliography_checkpoint_preference_dirty_only_untracked_noise_precedes.rs  bibliography_checkpoint_preference_included_body.rs  bibliography_checkpoint_preference_included_body_reversed.rs  bibliography_checkpoint_preference_included_body_reversed_baseline.rs  bibliography_checkpoint_preference_included_body_reversed_reversed.rs  bibliography_checkpoint_preference_included_body_unreadable.rs  bibliography_checkpoint_preference_included_body_unreadable_follows.rs  bibliography_checkpoint_preference_included_body_unreadable_precedes.rs  bibliography_checkpoint_preference_included_body_untracked.rs  bibliography_checkpoint_preference_included_body_untracked_follows.rs  bibliography_checkpoint_preference_included_body_untracked_precedes.rs  bibliography_checkpoint_preference_toplevel.rs  bibliography_checkpoint_preference_toplevel_reversed.rs  bibliography_checkpoint_preference_toplevel_reversed_baseline.rs  bibliography_checkpoint_preference_toplevel_reversed_reversed.rs  bibliography_checkpoint_preference_toplevel_unreadable.rs  bibliography_checkpoint_preference_toplevel_unreadable_follows.rs  bibliography_checkpoint_preference_toplevel_unreadable_precedes.rs  bibliography_checkpoint_preference_toplevel_untracked.rs  bibliography_checkpoint_preference_toplevel_untracked_follows.rs  bibliography_checkpoint_preference_toplevel_untracked_precedes.rs  bibliography_features.rs  bibliography_features_biblatex_print.rs  bibliography_features_biblatex_print_bibintoc_heading.rs  bibliography_features_biblatex_print_bibnumbered_heading.rs  bibliography_features_biblatex_print_core_and_smartcite.rs  bibliography_features_biblatex_print_core_and_smartcite_core.rs  bibliography_features_biblatex_print_core_and_smartcite_core_and_preamble.rs  bibliography_features_biblatex_print_core_and_smartcite_smartcite.rs  bibliography_features_biblatex_print_entries_and_multicite.rs  bibliography_features_biblatex_print_entries_and_multicite_entries.rs  bibliography_features_biblatex_print_entries_and_multicite_multicite.rs  (+1262 more)
crates/latexd/tests/support/: bibliography_checkpoint_preference_dirty_only_helpers.rs  bibliography_checkpoint_preference_included_body_helpers.rs  bibliography_checkpoint_preference_toplevel_helpers.rs  bibliography_features_biblatex_print_preamble_workflow_helpers.rs  bibliography_features_biblatex_print_simple_helpers.rs  bibliography_features_citation_fields_basic_variants_helpers.rs  bibliography_features_citation_fields_identifiers_helpers.rs  bibliography_features_citation_fields_metadata_helpers.rs  bibliography_features_natbib_variants_helpers.rs  bibliography_features_semantic_case_helpers.rs  bibliography_features_year_aliases_helpers.rs  bibliography_fixpoint_reuse_helpers.rs  bibliography_multi_checkpoint_preference_page_ordering_helpers.rs  bibliography_multi_rebuild_late_bibliography_rebuild_included_file_helpers.rs  bibliography_multi_rebuild_late_bibliography_rebuild_toplevel_helpers.rs  bibliography_multi_rebuild_late_bibliography_replay_included_body_extra_dirty_helpers.rs  bibliography_multi_rebuild_late_bibliography_rewrite_cases_helpers.rs  bibliography_multi_rebuild_late_bibliography_skip_cases_helpers.rs  bibliography_multi_rebuild_rev5_baseline_core_helpers.rs  bibliography_multi_rebuild_rev5_baseline_core_shipout_replay_helpers.rs  bibliography_multi_rebuild_rev5_baseline_sibling_dirty_helpers.rs  bibliography_multi_rebuild_rev5_baseline_support_helpers.rs  bibliography_multi_rebuild_rev5_late_change_helpers.rs  bibliography_multi_rebuild_rev5_tracked_tail_input_helpers.rs  bibliography_multi_rebuild_rev5_tracked_toplevel_helpers.rs  bibliography_multi_rebuild_trailing_input_included_body_baseline_helpers.rs  bibliography_multi_rebuild_trailing_input_included_body_extra_dirty_helpers.rs  bibliography_multi_rebuild_trailing_input_included_body_sibling_extra_dirty_unreadable_helpers.rs  bibliography_multi_rebuild_trailing_input_included_body_sibling_extra_dirty_untracked_helpers.rs  bibliography_multi_rebuild_trailing_input_included_body_sibling_ordering_helpers.rs  bibliography_multi_rebuild_trailing_input_root_helpers.rs  bibliography_multi_replay_checkpoint_preference_helpers.rs  bibliography_multi_replay_trailing_input_included_tail_helpers.rs  bibliography_multi_replay_trailing_input_toplevel_helpers.rs  bibliography_multi_same_page_checkpoint_preference_included_body_helpers.rs  bibliography_multi_same_page_checkpoint_preference_toplevel_helpers.rs  bibliography_multi_same_page_late_change_included_body_baseline_helpers.rs  (+90 more)
crates/tex-aux/: Cargo.toml
crates/tex-aux/src/: lib.rs
crates/tex-bootstrap/: Cargo.toml
crates/tex-bootstrap/src/: lib.rs
crates/tex-checkpoint/: Cargo.toml
crates/tex-checkpoint/src/: lib.rs
crates/tex-layout/: Cargo.toml
crates/tex-layout/src/: display_list_builder.rs  document_ir_builder.rs  font_metrics.rs  lib.rs  math_ir.rs  math_layout.rs  paragraph_breaker.rs
crates/tex-pdf/: Cargo.toml
crates/tex-pdf/src/: lib.rs  pdf_form.rs
crates/tex-vm/: Cargo.toml
crates/tex-vm/src/: lib.rs
docs/: architecture.md  contributor-notes.md  (+9 more)
(+2202 files in other folders)
