[workspace]
members = [
    "crates/hmr-protocol",
    "crates/tex-world",
    "crates/latexd",
    "crates/latexd-wasm",
    "crates/tex-aux",
    "crates/tex-tokens",
    "crates/tex-lexer",
    "crates/tex-render-model",
    "crates/tex-render-assets",
    "crates/tex-vm",
    "crates/tex-bootstrap",
    "crates/tex-layout",
    "crates/tex-fonts",
    "crates/tex-pdf",
    "crates/tex-checkpoint",
    "crates/tex-render-gs",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
blake3 = "1.8"
camino = { version = "1.2", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libloading = "0.8"
lopdf = { version = "0.44", default-features = false }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.20"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1"
which = "8.0"
proptest = "1.9"
