[package]
name = "latexd-wasi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
tex-layout = { path = "../tex-layout" }
tex-pdf = { path = "../tex-pdf" }
tex-render-model = { path = "../tex-render-model" }
tex-tokens = { path = "../tex-tokens" }
tex-vm = { path = "../tex-vm" }
