[package]
name = "latexd-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tex-layout = { path = "../tex-layout" }
tex-render-model = { path = "../tex-render-model" }
tex-tokens = { path = "../tex-tokens" }
tex-vm = { path = "../tex-vm" }
wasm-bindgen = "0.2"
