[package]
name = "latexd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
camino.workspace = true
clap.workspace = true
hmr-protocol = { path = "../hmr-protocol" }
image.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
tex-aux = { path = "../tex-aux" }
tex-bootstrap = { path = "../tex-bootstrap" }
tex-checkpoint = { path = "../tex-checkpoint" }
tex-pdf = { path = "../tex-pdf" }
tex-render-gs = { path = "../tex-render-gs" }
tex-vm = { path = "../tex-vm" }
tex-world = { path = "../tex-world" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
tex-layout = { path = "../tex-layout" }
tex-tokens = { path = "../tex-tokens" }
