[package]
name = "tex-checkpoint"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tex-tokens = { path = "../tex-tokens" }
tex-vm = { path = "../tex-vm" }
