[package]
name = "tex-layout"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
hypher = { version = "0.1.7", default-features = false, features = ["english"] }
tex-fonts = { path = "../tex-fonts" }
tex-render-model = { path = "../tex-render-model" }
