[package]
name = "tex-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tex-fonts = { path = "../tex-fonts" }
image.workspace = true
tex-layout = { path = "../tex-layout" }
tex-render-assets = { path = "../tex-render-assets" }
tex-render-model = { path = "../tex-render-model" }
